feat: Edit Profile & Email & Test

--- a/src/main/resources/templates/users/editProfile.html
+++ b/src/main/resources/templates/users/editProfile.html
@@ -6,13 +6,14 @@
 <body>
 <header th:replace="fragments/fragments.html :: header"></header>
 <div class="form-container">
-    <form th:action="@{/members/edit-profile}" method="post">
+    <form th:object="${memberUpdateForm}" th:action="@{/members/edit-profile}" method="post"
+          enctype="multipart/form-data">
         <div class="fileUpload">
             <label for="avatar">Avatar</label>
-            <input type="file" id="avatar" name="avatar">
+            <input type="file" th:field="*{multipartImageProfile}" id="avatar" accept="image/*">
         </div>
-        <input type="text" placeholder="Name" name="name">
-        <input type="email" placeholder="Email" name="email">
+        <input type="text" placeholder="Name" name="name" th:field="*{name}">
+        <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">name</small>
         <input type="submit" value="Update Profile">
     </form>
 </div>
