--- a/src/main/resources/templates/users/userDetail.html
+++ b/src/main/resources/templates/users/userDetail.html
@@ -15,7 +15,10 @@
     </div>
     <div class="user-profile__btns">
         <a href="/members/edit-profile">
-            <button>Edit Profile</button>
+            <button>✏️ Edit Profile</button>
+        </a>
+        <a href="/members/change-email">
+            <button>️📠 Change Email</button>
         </a>
         <a href="/members/change-password">
             <button>🔒 Change Password</button>
