--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -36,7 +36,7 @@
                     <a th:href="@{/videos/upload}">Upload</a>
                 </li>
                 <li>
-                    <a th:href="@{'/members/'+ ${#authentication.name}}">Profile</a>
+                    <a th:href="@{'/members/profile'}">Profile</a>
                 </li>
                 <form th:action="@{/logout}" method="post">
                     <button type="submit">Logout</button>
