feat: Change Password & Test

--- a/src/main/resources/templates/users/changePassword.html
+++ b/src/main/resources/templates/users/changePassword.html
@@ -6,10 +6,11 @@
 <body>
     <header th:replace="fragments/fragments.html :: header"></header>
     <div class="form-container">
-        <form th:action="@{/members/change-password}" method="post">
-            <input type="password" name="oldPassword" placeholder="Current Password">
-            <input type="password" name="newPassword" placeholder="New Password">
-            <input type="password" name="newPassword1" placeholder="Verify New Password">
+        <form th:object="${changePasswordForm}" th:action="@{/members/change-password}" method="post">
+<!--            <input type="password" name="oldPassword" placeholder="Current Password">-->
+            <input type="password" th:field="*{newPassword}" name="newPassword" placeholder="New Password">
+            <small class="form-text text-danger" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}">email</small>
+            <input type="password" th:field="*{newPassword1}" name="newPassword1" placeholder="Verify New Password">
             <input type="submit" value="Change Password">
         </form>
     </div>
