--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <header th:replace="fragments/fragments.html :: header"></header>
     <div class="form-container">
         <form th:action="@{/login}" method="post">
-            <input type="email" name="email" placeholder="Email">
+            <input type="text" name="username" placeholder="Email">
             <input type="password" name="password" placeholder="Password">
             <input type="submit" value="Log In">
         </form>
