--- a/src/main/resources/templates/videos/videoDetail.html
+++ b/src/main/resources/templates/videos/videoDetail.html
@@ -11,14 +11,19 @@
         <video th:src="@{video.videoFile}" autoplay></video>
         <div class="videoPlayer__controls">
             <div class="videoPlayer__column">
-                <span><i class="fas fa-volume-up"></i></span>
-                <span>00:00 / 10:00</span>
+                <span id="jsVolumeBtn"><i class="fas fa-volume-up"></i></span>
+                <span>
+                    <span id="currentTime">00:00:00</span>
+                    <span>/</span>
+                    <span id="totalTime">00:00:00</span>
+                </span>
+                <input type="range" class="videoPlayer__volume" id="jsVolume" min="0" max="1" value="0.5" step="0.1">
             </div>
             <div class="videoPlayer__column">
                 <span id="jsPlayButton"><i class="fas fa-play"></i></span>
             </div>
             <div class="videoPlayer__column">
-                <span><i class="fas fa-expand"></i></span>
+                <span id="jsFullScreen"><i class="fas fa-expand"></i></span>
             </div>
         </div>
     </div>
@@ -28,8 +33,8 @@
         </a>
         <h5 class="video__title" th:text="${video.title}">Video Title</h5>
         <p class="video__description" th:text="${video.description}">Video Description</p>
-        <span th:if="${video.views == 1}" class="video__views" th:text="${video.views + ' view'}">1</span>
-        <span th:if="${video.views > 1}" class="video__views" th:text="${video.views + ' views'}">1</span>
+        <span th:if="${video.views == 1}" class="video__views" th:text="${video.views} + ' view'">1</span>
+        <span th:if="${video.views > 1}" class="video__views" th:text="${video.views} + ' views'">1</span>
         <div class="video__author">
             Upload By <a th:href="@{'/members/profile/' + ${video.creator.name}}" th:text="${video.creator.name}"></a>
         </div>
