feat: Create VideoPlayer.js and Refactoring File Upload & Download

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -11,9 +11,9 @@
             <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
             <input type="text" th:field="*{name}" name="name" placeholder="Full Name">
             <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">name</small>
-            <input type="password" th:field="*{password}" name="password" placeholder="Password">
+            <input type="password" th:field="*{password}" name="password" placeholder="Password" autocomplete="on">
             <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></small>
-            <input type="password" th:field="*{password2}" name="password2" placeholder="Verify Password">
+            <input type="password" th:field="*{password2}" name="password2" placeholder="Verify Password" autocomplete="on">
             <input type="submit" value="Join Now">
         </form>
         <div th:replace="fragments/fragments.html :: social-login"></div>
