--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 <div class="home-videos">
     <div th:each="item : ${videos}" class="videoBlock">
         <a th:href="@{'/videos/' + ${item.id}}">
-            <video th:src="@{${item.videoFile}}" class="videoBlock__thumbnail" controls="false"></video>
+            <video th:src="@{${item.saveFileName}}" class="videoBlock__thumbnail" controls="false"></video>
             <h4 class="videoBlock__title" th:text="${item.title}"></h4>
             <h6 th:if="${item.views == 1}" class="videoBlock__views" th:text="${item.views + ' view'}"></h6>
             <h6 th:if="${item.views > 1}" class="videoBlock__views" th:text="${item.views + ' views'}"></h6>
