--- a/src/main/resources/templates/videos/search.html
+++ b/src/main/resources/templates/videos/search.html
@@ -11,7 +11,7 @@
     <div class="search__videos">
         <div th:each="item : ${videos}" class="videoBlock">
             <a th:href="@{'/videos/' + ${item.id}}">
-                <video th:src="'/videos/download?fileUrl=' + ${item.videoFile}" class="videoBlock__thumbnail" controls="true"></video>
+                <video th:src="'/videos/download?fileUrl=' + ${item.saveFileName}" class="videoBlock__thumbnail" controls="true"></video>
                 <h4 class="videoBlock__title" th:text="${item.title}"></h4>
                 <h6 class="videoBlock__views" th:text="${item.views}"></h6>
             </a>
