feat: Create videoRecorder.js

--- a/src/main/resources/templates/videos/upload.html
+++ b/src/main/resources/templates/videos/upload.html
@@ -22,4 +22,5 @@
 </div>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
+<script src="/js/videoRecorder.js"></script>
 </html>
