refactor: content type

--- a/src/main/resources/templates/videos/videoDetail.html
+++ b/src/main/resources/templates/videos/videoDetail.html
@@ -8,8 +8,9 @@
 <div th:replace="fragments/fragments.html :: message"></div>
 <div class="video-detail__container">
     <div class="videoPlayer" id="jsVideoPlayer">
-        <video></video>
-<!--            비디오 삽입-->
+        <video>
+            <!--            비디오 삽입-->
+        </video>
         <div class="videoPlayer__controls">
             <div class="videoPlayer__column">
                 <span id="jsVolumeBtn"><i class="fas fa-volume-up"></i></span>
