--- a/src/main/resources/templates/videos/videoDetail.html
+++ b/src/main/resources/templates/videos/videoDetail.html
@@ -29,6 +29,7 @@
             </div>
         </div>
     </div>
+
     <div class="video__info">
         <a th:if="${member.email == video.creator.email}" th:href="@{'/videos/' + ${video.id} + '/edit'}">
             <button>Edit Video</button>
@@ -41,23 +42,91 @@
             Upload By <a th:href="@{'/members/profile/' + ${video.creator.name}}" th:text="${video.creator.name}"></a>
         </div>
     </div>
-    <div class="video__comment">
-        <span th:if="${video.comments.size() == 1}" th:text="${video.comments.size() + ' comment'}"
-              class="video__comment-number"></span>
+</div>
+<div class="comment-container">
+    <div class="comment-container__input">
+        <div class="mb-3">
+            <label for="newCommentText" id="createCommentLabel">댓글 남기기</label>
+            <textarea class="form-control" id="newCommentText" name="content" placeholder="댓글을 남겨주세요"
+                      required></textarea>
+        </div>
+        <div class="comment-container__input-button">
+            <button class="btn btn-primary" type="submit" id="commentAddBtn">댓글 작성</button>
+        </div>
+    </div>
+
+    <div class="comment-container__timeline">
+                <span th:if="${video.comments.size() == 1}" th:text="${video.comments.size() + ' comment'}"
+                      class="video__comment-number"></span>
         <span th:if="${video.comments.size() > 1}" th:text="${video.comments.size() + ' comments'}"
               class="video__comment-number"></span>
         <span th:if="${video.comments.size() == 0}" th:text="${video.comments.size() + ' comment'}"
-              class="video__comment-number"></span>
-        <form method="post" class="add__comment" id="jsAddComment">
-            <input type="text" placeholder="Add a comment">
-        </form>
-        <ul th:each="comment : ${video.comments}" class="video__comments-list">
-            <li><span th:text="${commet.text}"></span></li>
+              class="video__comment-number">0 comment</span>
+
+        <ul class="time-label flex" id="commentList">
+<!--            ajax요청으로 댓글 삽입-->
+            <li class="card" th:each="comment : ${video.comments}">
+                <div class="card-header">
+                    <a th:href="@{'/members/profile/' + ${comment.name}}" th:text="${comment.name}">Joohyuk</a>
+                    <!--                    TODO: moment.js 활용-->
+                    <span class="fromNow">10분 전</span>
+                </div>
+                <div class="card-body">
+                    <p class="card-text" th:text="${comment.text}">동영상 시청 잘 했습니다!!!</p>
+                    <div id="comment-modify-button">
+                        <!--                        TODO: 수정 삭제 처리 핸들러 생성-->
+                        <a href="#" class="badge badge-primary">수정</a>
+                        <a href="#" class="badge badge-primary">삭제</a>
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+        <!--        TODO: Pagination 작업-->
+        <ul class="pagination pagination-sm justify-content-center">
+            <!--페이지 버튼 삽입-->
+            <li class="page-item disabled">
+                <span class="page-link">Previous</span>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item active" aria-current="page">
+                        <span class="page-link">
+                        2
+                        <span class="sr-only">(current)</span>
+                        </span>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+            </li>
         </ul>
     </div>
 </div>
 </body>
 <footer th:replace="fragments/fragments.html :: footer"></footer>
 <div class="videoId" th:id="${video.id}"></div>
+<input type="hidden" id="currentMemberName" th:value="${video.creator.name}">
 <script src="/js/videoPlayer.js"></script>
+<script src="/js/addComment.js"></script>
+<script id="template" type="text/x-handlebars-template">
+    <li class="card" data-id="{{id}}">
+        <div class="card-header">
+            <a href="/members/profile/{{name}}">{{name}}</a>
+            <!--                    TODO: moment.js 활용-->
+            <span class="fromNow">{{modifiedDateTime}}</span>
+        </div>
+        <div class="card-body">
+            <p class="card-text">{{text}}</p>
+            {{#if isWriter}}
+                <div id="comment-modify-button">
+                    <!--                        TODO: 수정 삭제 처리 핸들러 생성-->
+                    <input type="button" id="modify" onclick="commentObj.modifyComment({{id}})"
+                           data-toggle="modal" class="badge badge-primary" value="수정">
+                    <input type="button" id="delete" onclick="commentObj.deleteComment({{id}})"
+                           data-toggle="modal" class="badge badge-primary" value="삭제">
+                </div>
+            {{/if}}
+        </div>
+    </li>
+</script>
 </html>
