--- a/src/main/resources/templates/videos/videoDetail.html
+++ b/src/main/resources/templates/videos/videoDetail.html
@@ -45,10 +45,11 @@
 </div>
 <div class="comment-container">
     <div class="comment-container__input">
-        <div class="mb-3">
+        <div class="mb-3 form-group">
             <label for="newCommentText" id="createCommentLabel">댓글 남기기</label>
             <textarea class="form-control" id="newCommentText" name="content" placeholder="댓글을 남겨주세요"
                       required></textarea>
+            <div class="invalid-feedback">3자에서 200자 사이로 입력해 주세요</div>
         </div>
         <div class="comment-container__input-button">
             <button class="btn btn-primary" type="submit" id="commentAddBtn">댓글 작성</button>
@@ -115,10 +116,11 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body form-group">
                 <p>댓글을 수정해주세요.</p>
                 <textarea class="form-control" id="modifyCommentText" name="text" placeholder="댓글을 작성해 주세요"
                           required></textarea>
+                <div class="invalid-feedback">3자에서 200자 사이로 입력해 주세요</div>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-primary" type="button" aria-describedby="submitHelp"
@@ -178,10 +180,10 @@
             {{#if isWriter}}
                 <div id="comment-modify-button">
                     <!--                        TODO: 수정 삭제 처리 핸들러 생성-->
-                    <input type="button" id="modify" onclick="commentObj.modifyComment({{id}})"
-                           data-toggle="modal" class="badge badge-primary" value="수정">
-                    <input type="button" id="delete" onclick="commentObj.deleteComment({{id}})"
-                           data-toggle="modal" class="badge badge-primary" value="삭제">
+                    <a data-toggle="modal" data-target="#modifyCommentModal"
+                       class="badge badge-primary">수정</a>
+                    <a data-toggle="modal" data-target="#deleteCommentModal"
+                       class="badge badge-primary">삭제</a>
                 </div>
             {{/if}}
         </div>
